tests/ui/concurrent_cached_sync_writes_buckets_unsupported.rs
use cached::macros::concurrent_cached;

#[concurrent_cached(sync_writes_buckets = 32)]
fn f(x: i32) -> i32 {
    x
}

fn main() {}
